styles: Improve responsive behaviour & grid alignment (#121) Replacing percentage-based columns sizing with fine-tuned width based per breakpoint-range resulting in better column size predictability and alignment to 16px based grid. Bug: (T193920)[https://phabricator.wikimedia.org/T193920]

--- a/css/wmui-style-guide.dev.css
+++ b/css/wmui-style-guide.dev.css
@@ -219,6 +219,8 @@ sup {
 
 .clearfix:before,
 .clearfix:after,
+.page:before,
+.page:after,
 .content-box:before,
 .content-box:after {
 	content: ' ';
@@ -226,6 +228,7 @@ sup {
 }
 
 .clearfix:after,
+.page:after,
 .content-box:after {
 	clear: both;
 }
@@ -526,7 +529,6 @@ sup {
 /* ::: Footer ::: */
 .footer {
 	color: var( --color-base );
-	clear: both;
 	padding: 2.4rem 0;
 	font-size: 1.2rem;
 	font-weight: var( --font-weight-base );
@@ -631,7 +633,9 @@ sup {
 
 /* ... Smartphone portrait ... */
 @media ( min-width: 240px ) {
-	.content-box {
+	.content-box,
+	.site__title a,
+	.nav--main a {
 		transition: padding var( --transition-medium );
 	}
 
@@ -684,10 +688,10 @@ sup {
 		right: -3.2rem;
 	}
 
-	.nav--main a {
-		padding-left: 3.2rem;
-		padding-right: 3.2rem;
-	}
+		.nav--main a {
+			padding-left: 3.2rem;
+			padding-right: 3.2rem;
+		}
 
 	.color {
 		width: 18rem;
@@ -745,7 +749,8 @@ sup {
 /* ... Tablet ... */
 @media ( min-width: 768px ) {
 	.content-box {
-		max-width: var( --width-site );
+		width: 100%;
+		max-width: 960px;
 	}
 
 	.btn--nav-main {
@@ -757,8 +762,10 @@ sup {
 		margin-left: 0;
 	}
 
-		.site__title a {
-			padding-left: 3.2rem;
+		.site__title a,
+		.nav--main a {
+			padding-left: 1.6rem;
+			padding-right: 1.6rem;
 		}
 
 	.lnk--contribute span {
@@ -767,12 +774,18 @@ sup {
 	}
 
 	.col--start {
-		width: 33.33333333%;
-		padding-right: 1.6rem;
+		width: 20.8rem;
+		z-index: 1;
+		transition: width var( --transition-medium );
 	}
 	.col--end {
-		width: 66.66666667%;
-		padding-left: 1.6rem;
+		margin-left: -20.8rem;
+		padding-left: 24rem; /* = 22.4 + (2 * 1.6 padding) */
+	}
+
+	.nav--main {
+		left: auto;
+		right: auto;
 	}
 
 	figure,
@@ -789,15 +802,23 @@ sup {
 /* ... Tablet+ / Netbook ... */
 @media ( min-width: 992px ) {
 	.content-box {
-		width: var( --width-site );
-		max-width: none;
+		width: 100%;
+		max-width: var( --width-site-desktop-wide );
+	}
+
+	.site__title a,
+	.nav--main a {
+		padding-left: 3.2rem;
+		padding-right: 3.2rem;
 	}
 
 	.col--start {
-		width: 25%;
+		width: 24rem;
 	}
+
 	.col--end {
-		width: 75%;
+		margin-left: -24rem;
+		padding-left: 27.2rem; /* = 24 + (2 * 1.6 padding) */
 	}
 
 	.color {
@@ -815,5 +836,14 @@ sup {
 @media ( min-width: 1200px ) {
 	.content-box {
 		width: var( --width-site-desktop-wide );
+	}
+
+	.col--start {
+		width: 25.6rem;
+	}
+
+	.col--end {
+		margin-left: -25.6rem;
+		padding-left: 28.8rem; /* = 25.6 + (2 * 1.6 padding) */
 	}
 }
